syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.thinkerou.demo.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc AgainSayHello (AgainHelloRequest) returns (AgainHelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message AgainHelloRequest {
    string message = 1;
    string address = 2;
}

message AgainHelloReply {
    string details = 1;
}